# Pong

./: .gitignore  .pre-commit-config.yaml  README.rst  pong.py  pyproject.toml  setup.cfg
pong/: __init__.py  assets.py  game.py  game_objects.py  main.py  pong.py  screens.py
tests/: test_asset_manager.py  test_game_behavior.py  test_screens.py  test_startup.py
