[tool.poetry]
name = "pong"
version = "0.1.0"
description = "Simple implementation of the game Pong"
authors = ["Bradley Sherman <sirrus233@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyglet = "^1.4.8"

[tool.poetry.dev-dependencies]
pre-commit = "^1.20.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
